[package]
name = "biner"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[features]
downcast-rs = ["dep:downcast-rs"]
downcast = ["dep:downcast"]

[dependencies]
downcast = { version = "0.11.0", optional = true }
downcast-rs = { version = "2.0.1", optional = true }

